--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "symfony/maker-bundle": "^1.37",
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
+        "symfony/security-bundle": "6.0.*",
         "symfony/security-csrf": "6.0.*",
         "symfony/twig-bundle": "6.0.*",
         "symfony/validator": "6.0.*",
